k8s_yamls/simple_canary/canary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name:  guestbook-canary
  labels:
    app:  guestbook-canary
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app:  guestbook-canary
