k8s_yamls/simple_canary/canary/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-by-weight
  annotations:
    kubernetes.io/ingress.class: "citrix"
    ingress.citrix.com/frontend-ip: 172.18.0.5
    ingress.citrix.com/canary-weight: "20"
spec:
  rules:
  - host:  demo.webapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook-canary
          servicePort: 80
